# nano_gpt

./: .gitignore  Dockerfile  README.md  app.py  gpt.py  nano_gpt.ipynb  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
