[project]
name = "nano-gpt"
version = "0.1.0"
description = "Character-level transformer API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "numpy",
    "torch",
]

# Tell uv where to find the CPU-only version of PyTorch
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }